objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLoaderExternaID__c</fullName>
        <label>Data Loader ExternaID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelinquentBillsCount__c</fullName>
        <label>Delinquent Bills Count</label>
        <summaryFilterItems>
            <field>PropertyBill__c.Status__c</field>
            <operation>equals</operation>
            <value>Unpaid</value>
        </summaryFilterItems>
        <summaryForeignKey>PropertyBill__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Property_Owner_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not eligible</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Eligible for tax sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumofWaterBill__c</fullName>
        <label>Sum of Water Bill</label>
        <summarizedField>PropertyBill__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>PropertyBill__c.Type__c</field>
            <operation>equals</operation>
            <value>Water</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PropertyBill__c.Status__c</field>
            <operation>equals</operation>
            <value>Unpaid</value>
        </summaryFilterItems>
        <summaryForeignKey>PropertyBill__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UnpaidAlleyPaving__c</fullName>
        <label>Unpaid Alley Paving</label>
        <summaryFilterItems>
            <field>PropertyBill__c.Status__c</field>
            <operation>equals</operation>
            <value>Unpaid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PropertyBill__c.Type__c</field>
            <operation>equals</operation>
            <value>Alley Paving</value>
        </summaryFilterItems>
        <summaryForeignKey>PropertyBill__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UnpaidWaterBills__c</fullName>
        <label>Unpaid Water Bills</label>
        <summaryFilterItems>
            <field>PropertyBill__c.Status__c</field>
            <operation>equals</operation>
            <value>Unpaid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PropertyBill__c.Type__c</field>
            <operation>equals</operation>
            <value>Water</value>
        </summaryFilterItems>
        <summaryForeignKey>PropertyBill__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Eligible_Properties</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Eligible for tax sale</value>
        </filters>
        <label>Eligible Properties</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>